<resources>
    <string name="app_name">Simon Says Game</string>
    <string name="start">Start</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="high_scores">High Scores</string>
    <string name="exit">Exit</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="level">Level:</string>
</resources>